--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,11 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.0"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
